@@ -1,3 +1,12 @@
+2000-02-09  Mark Kettenis  <kettenis@gnu.org>
+
+	* configure.in: Check for lwpid_t, psaddr_t, prgregset_t and
+	prfpregset_t in <sys/procfs.h>.
+	* config.in: Add HAVE_LWPID_T, HAVE_PSADDR_T, HAVE_PRGREGSET_T,
+	HAVE_PRFPREGSET_T.
+	* gdb_proc_service.h: Only provide typedefs for lwpid_t, psaddr_t,
+	prgregset_t and prfpregset_t if they are not already present.
+
 Wed Feb 16 19:00:02 2000  Andrew Cagney  <cagney@b1.cygnus.com>
 
 	From 2000-01-26 Rodney Brown <RodneyBrown@pmsc.com>:
